@@ -28,16 +28,18 @@ public class TcsSources {
 	private static final Logger logger = Logger.getLogger(TcsSources.class);
 	
 	
+	@SuppressWarnings("deprecation")
 	public static URI normalExplicit(){
 		try {
-			//URL url = new URL("file:C:\\localCopy\\eclipse\\cdmlib\\trunk\\app-import\\src\\main\\resources\\excel\\NormalExplicit.xls");
+//			URL url = new File(("C:\\localCopy\\eclipse\\cdmlib\\trunk\\app-import\\src\\main\\resources\\excel\\NormalExplicit.xls")).toURL();
 			
 			// FIXME what is this????
 			URL url = new File("D:\\NormalExplicit.xls").toURI().toURL();
+
 			
+//			URL url = new TcsSources().getClass().getResource("excel/NormalExplicit.xls");
 			boolean exists = new File(url.getFile()).exists();
 			if (! exists) throw new RuntimeException("File not found: " + url);
-//			URL url = new TcsSources().getClass().getResource("excel/NormalExplicit.xls");
 			URI uri = url.toURI();
 			return uri;
 		} catch (MalformedURLException e1) {
